
PROJECT(OpenSceneGraphSamples)

SET(GLCORE_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/OpenSceneGraph/3rdParty/include" CACHE STRING "" FORCE)

#SET(OSG_GL1_AVAILABLE OFF CACHE STRING "" FORCE)
#SET(OSG_GL2_AVAILABLE ON CACHE STRING "" FORCE)
#SET(OSG_GL3_AVAILABLE ON CACHE STRING "" FORCE)
SET(OPENGL_PROFILE "GLCORE" CACHE STRING "OpenGL Profile to use, choose from GL1, GL2, GL3, GLES1, GLES2, GLES3" FORCE)

SET(OpenSceneGraph_Directory OpenSceneGraph/OpenSceneGraph-3.4.0)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${OpenSceneGraph_Directory})

MACRO(SetupSample SampleName)
	INCLUDE_DIRECTORIES(
		${OpenSceneGraph_SOURCE_DIR}/include
		${OpenSceneGraph_BINARY_DIR}/include
		${GLCORE_ROOT}
	)
	ADD_EXECUTABLE(${SampleName} ${TARGET_SRC} ${TARGET_H})
	TARGET_LINK_LIBRARIES(${SampleName} ${SAMPLE_COMMON_LIBRARIES})
	
	SET_TARGET_PROPERTIES(${SampleName} PROPERTIES FOLDER "Samples")

	SET_TARGET_PROPERTIES(${SampleName} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${SAMPLE_EXECUTABLE_OUTPUT_PATH}")
	SET_TARGET_PROPERTIES(${SampleName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${SAMPLE_EXECUTABLE_OUTPUT_PATH}")
	SET_TARGET_PROPERTIES(${SampleName} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${SAMPLE_EXECUTABLE_OUTPUT_PATH}")
	
	# Per-configuration property (VS, Xcode)
	FOREACH(CONF ${CMAKE_CONFIGURATION_TYPES})        # For each configuration (Debug, Release, MinSizeRel... and/or anything the user chooses)
		STRING(TOUPPER "${CONF}" CONF)                # Go uppercase (DEBUG, RELEASE...)

		# We use "FILE(TO_CMAKE_PATH", to create nice looking paths
		SET_TARGET_PROPERTIES(${SampleName} PROPERTIES "ARCHIVE_OUTPUT_DIRECTORY_${CONF}" "${SAMPLE_EXECUTABLE_OUTPUT_PATH}")
		SET_TARGET_PROPERTIES(${SampleName} PROPERTIES "RUNTIME_OUTPUT_DIRECTORY_${CONF}" "${SAMPLE_EXECUTABLE_OUTPUT_PATH}")
		SET_TARGET_PROPERTIES(${SampleName} PROPERTIES "LIBRARY_OUTPUT_DIRECTORY_${CONF}" "${SAMPLE_EXECUTABLE_OUTPUT_PATH}")
	ENDFOREACH(CONF ${CMAKE_CONFIGURATION_TYPES})
		
ENDMACRO(SetupSample)

FILE(GLOB SamplesSubDirs ${CMAKE_CURRENT_SOURCE_DIR}/Samples/*)

#SET(SAMPLE_COMMON_LIBRARIES OpenThreads osg osgDB osgUtil osgGA osgViewer osgText)

SET(SAMPLE_COMMON_LIBRARIES ${OPENGL_gl_LIBRARY})
LIST(APPEND SAMPLE_COMMON_LIBRARIES OpenThreads osg osgDB osgUtil osgGA osgViewer osgText)

SET(SAMPLE_EXECUTABLE_OUTPUT_PATH ${OpenSceneGraph_BINARY_DIR}/bin)

FOREACH(SampleDir ${SamplesSubDirs})
	ADD_SUBDIRECTORY(${SampleDir})
ENDFOREACH(SampleDir)

